--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
   ],
   "plugins": ["react-hooks"],
   "env": {
-    "browser": true
+    "browser": true,
+    "es6": true
   },
   "parserOptions": {
     "ecmaVersion": 2021,
@@ -26,5 +27,5 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "no-unused-vars": "warn"
-}
+  }
 }
