--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "shr.boxoffice",
+  "name": "shr.boxoffice",
   "icons": [
     {
       "src": "favicon.ico",
@@ -12,10 +12,17 @@
       "type": "image/png",
       "sizes": "192x192"
     },
+
     {
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "maskable_icon.png",
+      "type": "image/png",
+      "sizes": "512x512",
+      "purpose": "maskable"
     }
   ],
   "start_url": ".",
